# PAMSI-project3

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.sh
Algorithms/: CMakeLists.txt
Algorithms/inc/: Algorithms.hpp
Algorithms/src/: Algorithms.cpp
Board/: CMakeLists.txt
Board/inc/: board.hpp
Board/src/: board.cpp
Figure/: CMakeLists.txt
Figure/inc/: figure.hpp
Figure/src/: figure.cpp
King/: CMakeLists.txt
King/inc/: king.hpp
King/src/: king.cpp
Move/: CMakeLists.txt
Move/inc/: move.hpp
Move/src/: move.cpp
Pawn/: CMakeLists.txt
Pawn/inc/: pawn.hpp
Pawn/src/: pawn.cpp
Piece/: CMakeLists.txt
Piece/inc/: piece.hpp
Piece/src/: piece.cpp
Tile/: CMakeLists.txt
Tile/inc/: tile.hpp
Tile/src/: tile.cpp
firmware/: CMakeLists.txt  main.cpp
firmware/inc/: game.hpp
firmware/src/: game.cpp  main.cpp
